--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 /* CSS Reset */
+/* Layout */
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +18,7 @@ h1, p, a {
     margin: 0 1rem;
 }
 
-
+/* Custom Styles */
 .wide-bar {
     position: relative;
     width: 100%;
