css aangepast, laatste commits

--- a/src/components/Buttons/ButtonBookNow.css
+++ b/src/components/Buttons/ButtonBookNow.css
@@ -1,7 +1,7 @@
 
 .button {
     display: inline-block;
-    margin-top: 20px; /* Voeg ruimte toe boven de knop */
+    margin-top: 20px;
     padding: 20px 30px;
     border-radius: 50px;
     background-color: #f1f1f1;
